[package]
name = "warp-packer"
version = "0.0.0"
authors = ["Finter Mobility As"]
build = "build.rs"

[package.metadata.winres]
LegalCopyright = "Copyright © 2020 Finter Mobility As"

[dependencies]
clap = "4.0.18"
dirs = "4.0.0"
reqwest = "0.12.1"
tempdir = "0.3.7"
flate2 = "1.0"
tar = "0.4"
lazy_static = "1.1.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"
winapi = "0.3.9"