[package]
name = "warp-runner"
version = "0.0.0"
authors = ["Finter Mobility As"]
build = "build.rs"

[package.metadata.winres]
LegalCopyright = "Copyright © 2020 Finter Mobility As"

[dependencies]
memmem = "0.1.1"
flate2 = "1.0"
tar = "0.4"
dirs = "4.0.0"
winapi = "0.3.6"
log = "0.4.5"
simple_logger = "2.2.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"
winapi = "0.3.9"